--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,35 +21,96 @@
     margin: 0;
   }
   
+  .visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
   /* hele document */
   body {
+    /* display: grid;
+    grid-template-columns: repeat(12, 1fr); */
     margin: 0 16px; 
   }
   
+  header {
+    padding-top: 48px;
+  }
+
   /* links in class header */
   a.header {
     text-decoration: none;
     font-family: "martianmono";
+    text-transform: uppercase;
     font-size: 16px;
     color: var(--zwart);
+  }
+
+  a.blauwe-link {
+    text-decoration: none;
+    font-family: "martianmono";
+    text-transform: uppercase;
+    font-size: 16px;
+  /* pijltje blauw maken */
+    color: var(--blauw);
+  }
+
+  nav {
+    display: flex;
+  }
+
+  ul.nav {
+    display: flex;
+    gap: 1em;
+    align-items: left;
+  }
+
+  section.heading {
+    padding-top: 48px;
+    max-width: 900px;
+    text-align: center;
   }
 
   h1 {
     font-family: "archivo";
     font-size: 96px;
     font-weight: bold;
+    text-transform: uppercase;
+    
   }
   
   /* paragraphs in class header */
   p.header {
     font-family: "archivo";
     font-size: 24px;
+    text-transform: none;
   }
   
+
   /* section p1 */
+  section.trending {
+    padding-top: 48px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  section.search {
+    padding-top: 48px;
+  }
+
+  ul.lijst-events {
+    padding-top: 48px;
+  }
+
   h3 {
     font-family: "archivo";
     font-size: 48px;
+    text-transform: uppercase;
   }
   
   h4 {
@@ -60,17 +121,24 @@
   p.data {
     font-family: "martianmono";
     font-size: 16px;
+    text-transform: uppercase;
   }
   
   p.label {
     font-size: 16px;
     font-family: "martianmono";
     font-weight: light;
+    text-transform: uppercase;        /* hoofdletters */
     border: 1px solid black;
     padding: 4px;
     width:fit-content;
   }
   
+  
   li {
     list-style-type: none;
+  }
+
+  footer {
+    display: flex;
   }
