--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,20 +43,19 @@
   }
 
   /* links in class header */
-  a.header {
+  a {
     text-decoration: none;
     font-family: "martianmono";
     text-transform: uppercase;
     font-size: 16px;
+  }
+  
+  a.header {
     color: var(--zwart);
   }
 
   a.blauwe-link {
-    text-decoration: none;
-    font-family: "martianmono";
-    text-transform: uppercase;
-    font-size: 16px;
-  /* pijltje blauw maken */
+
     color: var(--blauw);
   }
 
@@ -118,17 +117,14 @@
     font-size: 32px;
   }
   
-  p.data {
+  p {
     font-family: "martianmono";
     font-size: 16px;
-    text-transform: uppercase;
+    text-transform: uppercase;     /* hoofdletters */
   }
   
   p.label {
-    font-size: 16px;
-    font-family: "martianmono";
     font-weight: light;
-    text-transform: uppercase;        /* hoofdletters */
     border: 1px solid black;
     padding: 4px;
     width:fit-content;
