veel grote wijzigingen in css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,140 +1,254 @@
 @font-face {
-    font-family: "archivo";
-    src: url("../assets/Archivo-VariableFont_wdth\,wght.ttf");
-  }
-  
-  @font-face {
-    font-family: "martianmono";
-    src: url("../assets/MartianMono-VariableFont_wdth\,wght.ttf")
-  }
-  
-  :root {
-    --zwart: #222226;
-    --grijs: #666666;
-    --wit: #FFFFFF;
-    --blauw: rgb(54, 75, 247);
-  }
-  
-  /* CSS reset */
-  * {
-    padding: 0;
-    margin: 0;
-  }
-  
-  .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-  }
+  font-family: "archivo";
+  src: url("../assets/Archivo-VariableFont_wdth\,wght.ttf");
+}
 
-  /* hele document */
-  body {
-    /* display: grid;
+@font-face {
+  font-family: "martianmono";
+  src: url("../assets/MartianMono-VariableFont_wdth\,wght.ttf")
+}
+
+:root {
+  --zwart: #222226;
+  --grijs: #666666;
+  --wit: #FFFFFF;
+  --blauw: rgb(54, 75, 247);
+  --spacing: 16px;
+  --large-spacing: 48px;
+  --border: 1px solid currentColor;
+}
+
+@media (max-width: 750px) {
+  :root {
+    --spacing: 8px;
+  }
+}
+
+/* CSS reset */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* < Goeie om nog te onderzoeken */
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+/* hele document */
+body {
+  /* display: grid;
     grid-template-columns: repeat(12, 1fr); */
-    margin: 0 16px; 
-  }
-  
-  header {
-    padding-top: 48px;
-  }
+  margin: var(--spacing);
+  border: var(--border);
+}
+
+header {
+  padding: var(--large-spacing) var(--spacing) 0;
 
   /* links in class header */
-  a {
-    text-decoration: none;
-    font-family: "martianmono";
-    text-transform: uppercase;
-    font-size: 16px;
-  }
-  
-  a.header {
+  .nav a {
     color: var(--zwart);
   }
+}
 
-  a.blauwe-link {
+a {
+  text-decoration: none;
+  font-family: "martianmono";
+  text-transform: uppercase;
+  font-size: 16px;
+}
 
-    color: var(--blauw);
-  }
 
-  nav {
-    display: flex;
-  }
+a.blauwe-link {
+  color: var(--blauw);
+}
 
-  ul.nav {
+nav {
+  display: flex;
+  justify-content: space-between;
+
+  .nav {
     display: flex;
     gap: 1em;
-    align-items: left;
   }
 
-  section.heading {
-    padding-top: 48px;
-    max-width: 900px;
-    text-align: center;
+}
+
+.left-container {
+  display: flex;
+  gap: var(--large-spacing);
+
+  .nav {
+    padding-top: var(--spacing);
   }
+}
+
+.right-container {
+  padding-top: var(--spacing);
+}
+
+section.heading {
+  display: flex;
+  flex-direction: column;
+  padding-top: 48px;
+  max-width: 900px;
+  text-align: center;
+  margin: auto;
 
   h1 {
+    padding-top: var(--spacing);
     font-family: "archivo";
     font-size: 96px;
     font-weight: bold;
     text-transform: uppercase;
-    
   }
-  
-  /* paragraphs in class header */
-  p.header {
+
+  .header {
     font-family: "archivo";
     font-size: 24px;
     text-transform: none;
-  }
-  
-
-  /* section p1 */
-  section.trending {
-    padding-top: 48px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-  
-  section.search {
-    padding-top: 48px;
+    line-height: 40px;
+    padding-top: var(--spacing);
   }
 
-  ul.lijst-events {
-    padding-top: 48px;
+  a.header {
+    text-transform: uppercase;
+    font-family: "martianmono";
+  }
+}
+
+
+/* section p1 */
+.trending {
+  display: grid;
+  margin-top: var(--large-spacing);
+  grid-template-columns: repeat(3, 1fr);
+  border-top: var(--border);
+  border-bottom: var(--border);
+}
+
+.event-item {
+  padding: var(--large-spacing);
+
+  &>img {
+    width: 100%;
+    aspect-ratio: 374/416;
+    object-fit: cover;
   }
 
   h3 {
-    font-family: "archivo";
-    font-size: 48px;
-    text-transform: uppercase;
+    hyphens: auto;
+  }
+
+  &+.event-item {
+    border-left: var(--border);
+  }
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+
+  .label {
+    margin-top: 24px;
+  }
+
+  .text {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  .data {
+    margin-top: var(--spacing);
+  }
+
+  h3 {
+    margin-top: var(--spacing);
+  }
+
+  .blauwe-link {
+    display: block;
+    margin-top: 56px;
+  }
+}
+
+
+section.search {
+  padding-top: 48px;
+  display: flex;
+  justify-content: space-between;
+  padding: var(--large-spacing);
+  border-bottom: var(--border);
+}
+
+section.list-item {
+  padding: 16px var(--large-spacing) 0;
+
+  li {
+    border-bottom: var(--border);
+    padding-bottom: 32px;
+  }
+
+  .label {
+    margin-top: 32px;
   }
   
   h4 {
-    font-family: "archivo";
-    font-size: 32px;
+    margin-top: var(--spacing);
   }
   
-  p {
-    font-family: "martianmono";
-    font-size: 16px;
-    text-transform: uppercase;     /* hoofdletters */
-  }
-  
-  p.label {
-    font-weight: light;
-    border: 1px solid black;
-    padding: 4px;
-    width:fit-content;
-  }
-  
-  
-  li {
-    list-style-type: none;
+  .data {
+    margin-top: var(--spacing);
   }
 
-  footer {
+  .flex-container {
     display: flex;
+    justify-content: space-between;
   }
+}
+
+
+.label {
+  font-weight: light;
+  border: var(--border);
+  padding: 4px;
+  width: fit-content;
+}
+
+h3 {
+  font-family: "archivo";
+  font-size: 48px;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-family: "archivo";
+  font-size: 32px;
+}
+
+p {
+  font-family: "martianmono";
+  font-size: 16px;
+  text-transform: uppercase;
+  /* hoofdletters */
+}
+
+
+
+li {
+  list-style-type: none;
+}
+
+footer {
+  display: flex;
+}
