nav hidden als mobile (voor nu)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,17 +21,6 @@
   --border: 1px solid black;
 }
 
-
-
-
-/* @media (width > 1080px) {
-:root {
-  --border: 1px solid black;
-} */
-/* } */
-
-
-
 /* CSS reset */
 * {
   padding: 0;
@@ -466,6 +455,9 @@ li {
     margin: 0;
   }
 
+  div.nav {
+    display: none;
+  }
   /* header */
 
   section.heading {
